--- a/slider.css
+++ b/slider.css
@@ -44,6 +44,7 @@ border-radius: 10px;
   width: 100%;
   text-align: center;
   font-family: Gore Rough;
+  src: url(Gore Rough.otf); 
 }
 .numbertext {
   color: #f2f2f2;
